Updated web content

--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@ thanks to martin rocamora for the css!
 <a href="http://www.universidad.edu.uy">Universidad de la República</a> of Montevideo, 
 <a href="http://g.co/maps/yrff">Uruguay</a>. -->
 
-I'm an Assistant Professor at <a href="http://www.universidad.edu.uy">Universidad de la República</a>, Montevideo,
-<a href="http://g.co/maps/yrff">Uruguay</a> since July 2016.<br/><br/>
+I'm a research scientist at <a href="https://ai.google/research">Google Research</a>, where I work on on computational imaging and machine learning.
+<br/><br/>
 
-Previously, I was  a postdoctoral researcher in <a href="http://sapirolab.pratt.duke.edu/">Guillermo Sapiro’s group</a>, 
+Previously, I was an Assistant Professor at <a href="http://www.universidad.edu.uy">Universidad de la República</a>, Montevideo,
+<a href="http://g.co/maps/yrff">Uruguay</a>.
+
+Before that, I was  a postdoctoral researcher in <a href="http://sapirolab.pratt.duke.edu/">Guillermo Sapiro’s group</a>, 
 at the <a href ="http://www.ee.duke.edu">ECE Department</a> 
 in <a href="http://www.ee.duke.edu">Duke University</a>.
 
@@ -70,7 +73,8 @@ And before that, I was a Ph.D. student at  <a href="http://www.cmla.ens-cachan.f
 of <a href="https://sites.google.com/site/jeanmichelmorelcmlaenscachan/">Jean-Michel Morel</a>, <a href="http://iie.fing.edu.uy/~pmuse/">Pablo Mus&eacute;</a> 
 and Andr&eacute;s Almansa. <br/><br/>
 
-I'm working on machine learning, signal and image processing and computer vision. I'm interested in photography, computational photography, and in finding new ways of applying machine learning, in particular deep learning, to signal processing. <br/><br/>
+My current work is at the intersection (and interaction of) machine learning, signal and image processing and computer vision. 
+I'm interested in finding new ways of applying machine learning to signal processing and to general inverse problems. <br/><br/>
 
 In this page you will find some pointers to my work. 
 Please feel free to contact me if you want more information, have any comments, suggestions. <br/><br/>
@@ -94,7 +98,7 @@ Facultad de Ingenieria<br/>
 Universidad de la República<br/>
 -->
 
-&nbsp;&nbsp; mdelbra [at] fing.edu.uy
+&nbsp;&nbsp; mdelbra [at] gmail.com
 
 
 </div>
@@ -112,20 +116,133 @@ Universidad de la República<br/>
 <p><br></br></p>
 <h2><a class="ref" name="research">&#x21dd;research&#x21dc;</a><a href="#_top"></a></h2>
 <div class="box">
-
-<span style="font-size: 1.2em;">Research interests</span><br/>
-
-		<ul>
-		<li>image processing, computer graphics, computational photography, machine learning, deep learning</li>
-		</ul>
-
-<br/>        
+       
 
 
 <span style="font-size: 1.2em;">Papers</span><br/>
 
 
 <!--<br/><span style="font-size: 1.2em;">2017</span><br/>-->
+
+
+<a id="arxiv-learning-2020" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Single Image Non-uniform Blur Kernel Estimation via Adaptive Basis Decomposition</div>
+            <div class="author">G. Carbajal, P. Vitoria, M. Delbracio, P. Musé, J. Lezama</div>
+            <div class="where">Preprint, 2021</div>
+            <div class="publilink">
+              <a href="https://arxiv.org/abs/2102.01026">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+
+<a id="arxiv-learning-2020" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Projected Distribution Loss for Image Enhancement</div>
+            <div class="author">M. Delbracio, H. Talebi, P. Milanfar</div>
+            <div class="where">Preprint, 2020</div>
+            <div class="publilink">
+              <a href="https://arxiv.org/abs/2012.09289">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+
+<a id="arxiv-learning-2020" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Polyblur: Removing mild blur by polynomial reblurring</div>
+            <div class="author">M. Delbracio, I. Garcia-Dorado, S. Choi, D. Kelly, P. Milanfar</div>
+            <div class="where">Preprint, 2020</div>
+            <div class="publilink">
+              <a href="https://arxiv.org/abs/2012.09322">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+
+<a id="arxiv-learning-2020" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Learning to Reduce Defocus Blur by Realistically Modeling Dual-Pixel Data</div>
+            <div class="author">A. Abuolaim, M. Delbracio, D. Kelly, M.S. Brown, P. Milanfar</div>
+            <div class="where">Preprint, 2020</div>
+            <div class="publilink">
+              <a href="https://arxiv.org/abs/2012.03255">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+
+<a id="tpami-differential-2020" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Differential 3D Facial Recognition: Adding 3D to Your State-of-the-Art 2D Method</div>
+            <div class="author">J.M. Di Martino, F. Suzacq, M. Delbracio, Q. Qiu, G. Sapiro</div>
+            <div class="where">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2020</div>
+            <div class="publilink">
+              <a href="https://doi.org/10.1109/TPAMI.2020.2986951">[doi]</a>
+              <a href="https://arxiv.org/abs/2004.03385">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+
+<a id="arxiv-solving-2019" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Solving Inverse Problems by Joint Posterior Maximization with a VAE Prior</div>
+            <div class="author">M. Gonzalez, A. Almansa, M. Delbracio, P. Musé, P. Tan</div>
+            <div class="where">Preprint, 2019</div>
+            <div class="publilink">
+                  <a href="https://arxiv.org/abs/1911.06379">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+
+<a id="ispa-degradation-2019" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Efficient blind deblurring under high noise levels</div>
+            <div class="author"> J. Anger, M. Delbracio, G. Facciolo</div>
+            <div class="where">International Symposium on Image and Signal Processing and Analysis (ISPA), 2019</div>
+            <div class="publilink">
+                  <a href="https://arxiv.org/abs/1904.09154">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+<a id="jmiv-anomaly-detection2019" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Image Anomalies: a Review and Synthesis of Detection Methods</div>
+            <div class="author">T. Ehret, A. Davy, J.-M. Morel, M. Delbracio</div>
+            <div class="where">Journal of Mathematical Imaging and Vision (JMIV), 2019 (to appear)</div>
+            <div class="publilink">
+                  <a href="https://arxiv.org/abs/1808.02564">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
 
 
 <a id="jmiv-anomaly-detection2019" class="anchor">&nbsp;</a>
@@ -183,8 +300,6 @@ Universidad de la República<br/>
           </td>
         </tr>
       </table>
-
-
 
 
 
@@ -370,9 +485,6 @@ Universidad de la República<br/>
         </tr>  
       </table>
 
-<br/><span style="font-size: 1.2em;">Older ones</span><br/>
-
-
 <a id="siims2012" class="anchor">&nbsp;</a>
       <table class="finalpubli">
         <tr>
@@ -388,9 +500,6 @@ Universidad de la República<br/>
                 <a href="https://github.com/mdelbra/two-photos-psf-estim">[code]</a>
                 <a href="http://iie.fing.edu.uy/~mdelbra/publi/2012/siims2012/delbracio2012subpixel.bib">[bib]</a>                
             </div>
-            <ul class="comment">
-            <li>A demo and a reference source code are available on the <a href="http://dx.doi.org/10.5201/ipol.2013.77">IPOL publication</a>.</li>
-            </ul> 
           </td>
         </tr>  
       </table>
@@ -410,9 +519,6 @@ Universidad de la República<br/>
                 <a href="https://github.com/mdelbra/psf-estim">[code]</a>
                 <a href="http://iie.fing.edu.uy/~mdelbra/publi/2012/ijcv2012/delbracio2012nonparametric.bib">[bib]</a>                
             </div>
-            <ul class="comment">
-            <li>A demo and a reference source code are available on the <a href="http://dx.doi.org/10.5201/ipol.2012.admm-nppsf">IPOL publication</a>.</li>
-            </ul> 
           </td>
         </tr>  
       </table>
@@ -441,6 +547,22 @@ Universidad de la República<br/>
  <span style="font-size: 1.2em;"><a class="ref" name="ipol">
  IPOL - Image Processing Online :: reproducible research</a></span><br/>
 
+<a id="ipol2019blind" class="anchor">&nbsp;</a>
+      <table class="ipolpubli">
+        <tr>
+          <td>
+            <div class="title">How to Reduce Anomaly Detection in Images to Anomaly Detection in Noise</div>
+            <div class="author">T. Ehret, A. Davy, M. Delbracio, J.-M. Morel</div>
+            <div class="where">IPOL, 2019.</div>
+            <div class="publilink">
+                <a href="https://doi.org/10.5201/ipol.2019.263">[doi]</a>
+                <a href="https://doi.org/10.5201/ipol.2019.263">[web]</a>
+                <a href="https://doi.org/10.5201/ipol.2019.263">[demo]</a>
+                <a href="https://doi.org/10.5201/ipol.2019.263">[code]</a>
+            </div>
+         </td>
+          </tr>
+      </table>
 
 
 <a id="ipol2019blind" class="anchor">&nbsp;</a>
@@ -654,7 +776,6 @@ Universidad de la República<br/>
         <li>Deep Learning for Computer Vision<a href="http://iie.fing.edu.uy/~mdelbra/DL2018/"> [web]</a> </li>
         <li>Introduction to Research in Electrical Engineering <a href="https://eva.fing.edu.uy/course/view.php?id=1126"> [web]</a></li>
     	</ul>
-    <br/>
     </li>
     </ul> 
 ​	
@@ -667,7 +788,6 @@ Universidad de la República<br/>
         <li>Pattern Recognition</li>
         <li>Digital Filter Lab</li>
     	</ul>
-    <br/>
     </li>
     </ul> 
 
@@ -680,7 +800,6 @@ Universidad de la República<br/>
         <li>Pattern Recognition</li>
         <li>Digital Filter Lab</li>
     	</ul>
-    <br/>
     </li>
     </ul> 
 
@@ -692,7 +811,6 @@ Universidad de la República<br/>
         <li>Hilbert and Fourier analysis (lectures/lab) : 2011, 2012 <a href="http://dev.ipol.im/~facciolo/hilbert/"> [web]</a> </li>
     	<li>Numerical methods and ordinary differential equations (excercises/matlab) : 2010, 2011</li>
     	</ul>
-    <br/>
     </li>
 
 
@@ -752,7 +870,7 @@ Universidad de la República<br/>
 
 
 <div style="text-align: center;"><p><span style="font-size: 0.6em;">
-last modified: 03 Sep 2018; css by <a href="http://iie.fing.edu.uy/~rocamora/">m.r.</a>
+last modified: 13 Feb 2021; css by <a href="http://iie.fing.edu.uy/~rocamora/">m.r.</a>
 </span></p></div>
 <div style="text-align: center;">
 <p>
