--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ thanks to martin rocamora for the css!
 I'm a research scientist at <a href="https://ai.google/research">Google Research</a>, where I work on on computational imaging and machine learning.
 <br/><br/>
 
-Previously, I was an Assistant Professor at <a href="http://www.universidad.edu.uy">Universidad de la República</a>, Montevideo,
+Previously, I was an Assistant Professor in Electrical Engineering at <a href="http://www.universidad.edu.uy">Universidad de la República</a>, Montevideo,
 <a href="http://g.co/maps/yrff">Uruguay</a>.
 
 Before that, I was  a postdoctoral researcher in <a href="http://sapirolab.pratt.duke.edu/">Guillermo Sapiro’s group</a>, 
