Added Tour paper

--- a/index.html
+++ b/index.html
@@ -125,7 +125,21 @@ Universidad de la República<br/>
 <!--<br/><span style="font-size: 1.2em;">2017</span><br/>-->
 
 
-<a id="arxiv-learning-2020" class="anchor">&nbsp;</a>
+<a id="arxiv-tour-2021" class="anchor">&nbsp;</a>
+      <table class="finalpubli">
+        <tr>
+          <td>
+            <div class="title">Mobile Computational Photography: A Tour</div>
+            <div class="author">M. Delbracio, D. Kelly, M. S. Brown, P. Milanfar</div>
+            <div class="where">Preprint, 2021</div>
+            <div class="publilink">
+              <a href="https://arxiv.org/abs/2102.09000">[arXiv]</a>
+            </div>
+          </td>
+        </tr>
+      </table>
+
+<a id="arxiv-learning-2021" class="anchor">&nbsp;</a>
       <table class="finalpubli">
         <tr>
           <td>
