--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@ Universidad de la República<br/>
           <td>
             <div class="title">Inversion by Direct Iteration: An Alternative to Denoising Diffusion for Image Restoration</div>
             <div class="author">M. Delbracio, P. Milanfar</div>
-            <div class="where">TMLR, 2023 (Certified)</div>
+            <div class="where">TMLR, 2023 (Featured Certification)</div>
             <div class="publilink">
               <a href="https://openreview.net/forum?id=VmyFF5lL3F">[openreview]</a>
-              <a href="http://tmlr.infinite-conf.org/paper_pages/VmyFF5IL3F.html">[web]</a>
+              <a href="https://tmlr.infinite-conf.org/paper_pages/VmyFF5IL3F.html">[web]</a>
               <a href="https://arxiv.org/abs/2303.11435">[arXiv]</a>
             </div>
           </td>
