--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ An old talk that I gave summarizing my work for the <a href= "http://www.siam.or
 
 Full list of publications in <a href="https://scholar.google.com/citations?user=lDDm920AAAAJ">Google Scholar</a>. <br/><br/>
 
-
+</div>
 
 <div class="boxright">
  <img  id="ico" alt="knobs" src="./img/me2.jpg"/>
