--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body>
 
-
 <div class="navigation">
 	<h1><a class="ref" name="_top">mauricio delbracio</a></h1>
 	<ul>
@@ -51,13 +50,8 @@ thanks to martin rocamora for the css!
 
 <h2><a class="ref" name="aboutme">&#x21dd;about me&#x21dc;</a><a href="#_top"></a></h2>
 
+<div class="box">
 <div class="boxleft">
-
-<!--My name is Mauricio Delbracio. I&rsquo;m an Electrical Engineer with a degree from the 
-<a href="http://www.fing.edu.uy">Facultad de Ingeniería</a>, 
-<a href="http://www.universidad.edu.uy">Universidad de la República</a> of Montevideo, 
-<a href="http://g.co/maps/yrff">Uruguay</a>. -->
-
 I'm a research scientist at <a href="https://ai.google/research">Google Research</a>, where I work on on computational imaging and machine learning.
 My current work is at the intersection & interaction of machine learning, signal and image processing and computer vision. 
 I'm interested in finding new ways of applying machine learning to signal processing and to general inverse problems. <br/><br/>
@@ -86,32 +80,23 @@ An old talk that I gave summarizing my work for the <a href= "http://www.siam.or
 Full list of publications in <a href="https://scholar.google.com/citations?user=lDDm920AAAAJ">Google Scholar</a>. <br/><br/>
 
 </div>
-
 <div class="boxright">
  <img  id="ico" alt="knobs" src="./img/me2.jpg"/>
 
-<!--<br/>
-Inst. de Ingeniería Eléctrica<br/>
-Facultad de Ingenieria<br/>
-Universidad de la República<br/>
--->
-
 &nbsp;&nbsp; mdelbra [at] gmail.com
+</div>
 
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
 
 </div>
 
-
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-
-<p><br></br></p>
-
-<p><br></br></p>
 <h2><a class="ref" name="research">&#x21dd;research&#x21dc;</a><a href="#_top"></a></h2>
 <div class="box">
        
@@ -990,29 +975,18 @@ Universidad de la República<br/>
 	<ul>
 	<li>The histogram of <span class="it">A Confederacy of Dunces</span> <a href="./img/yeah.png">[png]</a></li>
  	</ul>
+
+
+
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
+<p><br></br></p>
 </div>
-
-
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-<p><br></br></p>
-
 
 <div style="text-align: center;"><p><span style="font-size: 0.6em;">
-last modified: 13 Feb 2021; css by <a href="http://iie.fing.edu.uy/~rocamora/">m.r.</a>
+last modified: 6 Dec 2023; css by <a href="http://iie.fing.edu.uy/~rocamora/">m.r.</a>
 </span></p></div>
-<div style="text-align: center;">
-<p>
-<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
-</p>
-</div>
-
 
 </body>
 </html>
