--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ thanks to martin rocamora for the css!
 <p><br></br></p>
 <p><br></br></p>
 <p><br></br></p>
+<a href="https://docs.google.com/presentation/d/1Dg_LgUOUDkZ7MKDffnyKfwhsGhrRfdkiqUuyMRVziVQ/edit?usp=sharing">optica-slides</a>	
 <p><br></br></p>
 
 
